JBTM-3590 Sorted pom, Remove the override of the jaxws-ri, Moved the dependency versions up to the root pom.xml, Required JDK 11 or higher in the enforcer, Removed an override potential for version.org.jboss.spec.javax.xml.bind.jboss-jaxb-api_2.3_spec, Removed the adding of the java.se module, Sorted pom